--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {    
     "jquery": "1.8.3",
     "domino": "*",
-    "jasmine-node": "1.4"
+    "jasmine-node": "1.4",
+    "uglify-js2" : "2.1.11"
+
   },
   "scripts": {
     "test": "jasmine-node test --verbose" 
