--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "author": "@nekman (http://nekman.se)",
   "description": "Keynavigator plugin for jQuery / Zepto",
+  "url": "https://github.com/nekman/keynavigator",
   "name": "Keynavigator",
-  "version": "0.0.1",
+  "version": "2.1.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/nekman/keynavigator.git"
   },
-  "dependencies": {    
+  "dependencies": {
     "jquery": "1.8.3",
     "domino": "*",
     "jasmine-node": "1.4",
-    "uglify-js2" : "2.1.11"
+    "uglify-js2": "2.1.11",
+    "grunt-encase": "*",
+    "grunt-contrib-requirejs": "~0.4.1"
   },
   "scripts": {
-    "test": "jasmine-node test --verbose" 
+    "test": "jasmine-node test --verbose"
   },
   "engines": {
     "node": "~0.8"
+  },
+  "devDependencies": {
+    "grunt-contrib-requirejs": "~0.4.1"
   }
 }
