--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-template-jasmine-requirejs": "~0.1.6",
     "grunt-contrib-jasmine": "~0.5.2"
+  },
+  "scripts": {
+    "test": "grunt --verbose"
   }
 }
