--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-template-jasmine-requirejs": "~0.1.6",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-jshint": "~0.6.4"
   },
   "scripts": {
     "test": "grunt --verbose"
